# cookiecutter-genomics

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
{{cookiecutter.package_name}}/: README.md  Snakefile  pyproject.toml  smk_config.yaml
{{cookiecutter.package_name}}/docs/: lab_book.md
{{cookiecutter.package_name}}/src/: utils.sh
