[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.first_version }}"
description = "{{ cookiecutter.project_short_description | replace('\\', '\\\\') | replace('\"', '\\\"') }}"
readme = "README.md"
authors = [
  {name = "{{ cookiecutter.full_name | replace('\\', '\\\\') | replace('\"', '\\\"') }}", email = "{{cookiecutter.email}}"}
]
license = {text = "MIT"}

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "linux-64"]
conda-pypi-map = { conda-forge = "https://raw.githubusercontent.com/prefix-dev/parselmouth/refs/heads/main/files/compressed_mapping.json", bioconda = "https://raw.githubusercontent.com/prefix-dev/parselmouth/refs/heads/main/files/compressed_mapping.json" }

[tool.pixi.dependencies]
python = "3.14.*"
numpy = ">=2.4.3,<3"
pandas = "3.*"
matplotlib = ">=3.10.8,<4"
seaborn = ">=0.13.2,<0.14"
scipy = ">=1.17.1,<2"
statsmodels = ">=0.14.6,<0.15"
ipykernel = ">=7.2.0,<8"
pip = ">=26.0.1,<27"
ruff = ">=0.15.9,<0.16"
snakemake-minimal = "9.16.*" # Breaking change in 9.17; reversed in 9.18
snakefmt = ">=1.0.0,<2"
bcftools = ">=1.23.1,<2"
bedtools = ">=2.31.1,<3"

[tool.pixi.pypi-dependencies]
pandas-checks = '>=1.1.0,<2'
statannotations = '>=0.7.2,<0.8'
adjusttext = ">=1.3.0,<2"
{{ cookiecutter.import_name }} = { path = ".", editable = true }
ab_utils = { git = "https://github.com/alexblakes/ab_utils.git", branch='main'}

[tool.pixi.tasks]
ruff_lint = "ruff check --fix"
ruff_format = "ruff format"
smk_format = "snakefmt Snakefile workflow/"
fmt = { depends-on = ["ruff_lint", "ruff_format", "smk_format"] }
smk = "snakemake --cores 4"